[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/register_bottom.png" type="Texture" id=1]
[ext_resource path="res://assets/register_drawer.png" type="Texture" id=2]
[ext_resource path="res://assets/register_top.png" type="Texture" id=3]
[ext_resource path="res://scenes/Register.gd" type="Script" id=4]
[ext_resource path="res://assets/font/SimpleFont.fnt" type="BitmapFont" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 29, 52 )

[node name="Register" type="Area2D"]
script = ExtResource( 4 )

[node name="register_top" type="Sprite" parent="."]
z_index = 1
texture = ExtResource( 3 )
offset = Vector2( 0, 0.5 )

[node name="register_bottom" type="Sprite" parent="."]
position = Vector2( 0, 33 )
texture = ExtResource( 1 )

[node name="register_drawer" type="Sprite" parent="."]
position = Vector2( 0, 14 )
texture = ExtResource( 2 )
offset = Vector2( 0, 0.5 )

[node name="Tween" type="Tween" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 28 )
shape = SubResource( 1 )

[node name="PriceLabelNode2D" type="Node2D" parent="."]
z_index = 2

[node name="PriceLabel" type="Label" parent="PriceLabelNode2D"]
margin_left = -3.0
margin_top = -17.0
margin_right = 45.0
margin_bottom = -3.0
rect_scale = Vector2( 0.66, 0.66 )
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0, 0.32549, 0.0352941, 1 )
text = "0.00"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}
